force-app/main/default/objects/Claimant_Confirmation__c/Claimant_Confirmation__c.object-meta.xml
<CustomObject>
    <label>Claimant Confirmation</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Claimant Confirmation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claimants Confirmation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>