force-app/main/default/objects/Claimant_Confirmation__c/fields/Case_Management__c.field-meta.xml
<CustomField>
    <fullName>Case_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Management</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Claimants Confirmation</relationshipLabel>
    <relationshipName>Claimants_Confirmation</relationshipName>
    <type>Lookup</type>
</CustomField>