force-app/main/default/objects/Claimant_Confirmation__c/fields/Case_Promoted__c.field-meta.xml
<CustomField>
    <fullName>Case_Promoted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Promoted</label>
    <type>Checkbox</type>
</CustomField>