force-app/main/default/objects/Claimant_Confirmation__c/fields/Claimant_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Confirmation__c</fullName>
    <label>Claimant Confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirm</fullName>
            </value>
            <value>
                <fullName>Deny</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>