force-app/main/default/objects/Claimant_Confirmation__c/fields/Claimant_response__c.field-meta.xml
<CustomField>
    <fullName>Claimant_response__c</fullName>
    <label>Claimant response</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>